[package]
name = "tk-http-file"
description = """
    A file serving library for tk-http. It makes very easy to write
    full-featured static file server (incl. conditional request,
    range requests, etc)
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["http", "serve", "filesystem", "file"]
homepage = "http://github.com/swindon-rs/tk-http-file"
documentation = "http://docs.rs/tk-http-file"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
log = "0.3.8"
httpdate = "0.2.1"
mime_guess = "1.8.2"

# for making etag
blake2 = "0.3.0"
digest-writer = "0.1.0"
generic-array = "0.5.1"
typenum = "1.5.1"
byteorder = "1.1.0"

[dev-dependencies]
futures = "0.1.14"
futures-cpupool = "0.1.5"
tk-http = { rev="cd33594", git="https://github.com/swindon-rs/tk-http" }
lazy_static = "0.2.8"

tk-listen = "0.1.0"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
env_logger = "0.4.3"
