[package]
name = "http-file-headers"
description = """
    A framework-agnostic helper library for serving static files.
    It makes very easy to write full-featured static file server
    (incl. conditional headers, encodings, range requests, etc)
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["http", "serve", "filesystem", "file", "headers"]
homepage = "http://github.com/swindon-rs/http-file-headers"
documentation = "http://docs.rs/http-file-headers"
version = "0.1.1"
authors = ["paul@colomiets.name"]

[dependencies]
httpdate = "0.2.1"
mime_guess = "1.8.2"

# for making etag
blake2 = "0.3.0"
digest-writer = "0.1.0"
generic-array = "0.5.1"
typenum = "1.5.1"
byteorder = "1.1.0"

[dev-dependencies]
log = "0.3.8"
futures = "0.1.14"
futures-cpupool = "0.1.5"
lazy_static = "0.2.8"

tk-http = "0.3.1"
tk-listen = "0.1.0"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
env_logger = "0.4.3"
