[package]
name = "http-file-headers"
description = """
    A framework-agnostic helper library for serving static files.
    It makes very easy to write full-featured static file server
    (incl. conditional headers, encodings, range requests, etc)
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["http", "serve", "filesystem", "file", "headers"]
homepage = "http://github.com/swindon-rs/http-file-headers"
documentation = "http://docs.rs/http-file-headers"
version = "0.1.8"
authors = ["Paul Colomiets <paul@colomiets.name>"]

[dependencies]
httpdate = "0.3.2"
mime_guess = "1.8.2"

# for making etag
blake2 = "0.7.1"
digest-writer = "0.3.1"
generic-array = "0.11.1"
typenum = "1.10.0"
byteorder = "1.2.3"

[dev-dependencies]
log = "0.4.2"
futures = "0.1.14"
futures-cpupool = "0.1.5"
lazy_static = "1.0.1"

tk-http = "0.3.1"
tk-listen = "0.1.0"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
env_logger = "0.5.2"
